# magicbot

./: .env.example  .gitignore  CLAUDE.md  MOMENTUM_STRATEGY_OPTIMIZED.md  OPTIMIZATION_RESULTS.md  README.md  REALTIME_TESTING_GUIDE.md  day_trading_implementation_guide_20250726_140500.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_backtest.sh  run_realtime_test.sh  test_backtest_fix.py  test_balanced_strategy.py  test_improved_strategy.py  test_trailing_stop.py  test_trailing_stop_focused.py
config/: .env.template  development.yaml  production.yaml
database/: schema.sql
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/: EXAMPLES.md  README.md  STRATEGY_PARAMETERS.md  TRADING_GUIDE.md  TROUBLESHOOTING.md  VLAM_CONSOLIDATION_STRATEGY.md
examples/: multi_strategy_example.py
scripts/: backtest_aggressive_available_data.py  backtest_aggressive_config.py  backtest_day_trading.py  cleanup.py  compare_strategies.py  comprehensive_aggressive_backtest.py  comprehensive_momentum_optimizer.py  create_optimization_tables.py  create_optimization_tables_simple.py  debug_aggressive_strategy.py  debug_day_trading.py  debug_env.py  debug_subscriptable_error.py  debug_vlam_strategy.py  demo_leverage_functionality.py  direct_vlam_optimize.py  dynamic_aggressive_strategy.py  fast_momentum_optimizer.py  final_parameter_analysis.py  fix_database.py  fix_debug_aggressive.py  manual_optimize.py  minimal_optimizer.py  optimize_day_trading.py  optimize_momentum_strategy.py  optimize_scalping_parameters.py  optimize_vlam_parameters.py  quick_momentum_optimize.py  quick_optimize_day_trading.py  quick_scalping_optimization.py  quick_vlam_optimize.py  relaxed_aggressive_backtest.py  run_backtest.py  run_multi_strategy_backtest.py  run_optimized_backtest.py  setup_db.py  setup_week2.py  simple_aggressive_backtest.py  simple_day_trading_test.py  simple_momentum_test.py  (+18 more)
src/api/: main.py
tests/: README.md  conftest.py  run_tests.py  test_new_architecture.py
(+72 files in other folders)
